# fastica

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: recursive_ica.h  recursive_ica.h~  sys_lib.h  sys_lib.h~
src/: recursiveica.cpp  recursiveica.cpp~
